# moodlemarking

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
moodlemarking/: add_margin.py  add_margins.py  moodlezip.py
src/moodlemarking/: __about__.py
